--- a/Practica1/app/src/main/AndroidManifest.xml
+++ b/Practica1/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".imcCalculator.ResultIMCActivity"
+            android:exported="false" />
+        <activity
             android:name=".imcCalculator.ImcCalculatorActivity"
             android:exported="false" />
         <activity
@@ -29,7 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".firstApp.FirstAppActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
