--- a/Practica1/app/src/main/AndroidManifest.xml
+++ b/Practica1/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".toDoApp.ToDoAppActivity"
+            android:theme="@style/Theme.ToDoApp"
+            android:exported="false" />
+        <activity
             android:name=".imcCalculator.ResultIMCActivity"
             android:exported="false" />
         <activity
