--- a/Practica1/app/src/main/AndroidManifest.xml
+++ b/Practica1/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.Practica1"
         tools:targetApi="31">
         <activity
-            android:name=".toDoApp.ToDoAppActivity"
-            android:theme="@style/Theme.ToDoApp"
+            android:name=".superheroApp.SuperheroListActivity"
             android:exported="false" />
+        <activity
+            android:name=".toDoApp.ToDoAppActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ToDoApp" />
         <activity
             android:name=".imcCalculator.ResultIMCActivity"
             android:exported="false" />
