--- a/Practica1/app/src/main/AndroidManifest.xml
+++ b/Practica1/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".settings.SettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".superheroApp.DetailSuperheroActivity"
             android:exported="false" />
         <activity
